--- a/appspec.yml
+++ b/appspec.yml
@@ -1,16 +1,15 @@
 version: 0.0
 os: linux
+
 files:
-  - source: app.py
-    destination: /home/ec2-user/app
-  - source: scripts/
-    destination: /home/ec2-user/app/scripts
+  - source: index.html
+    destination: /home/ec2-user/
+
 hooks:
   AfterInstall:
     - location: scripts/install_dependencies.sh
       timeout: 300
-      runas: ec2-user
-  ApplicationStart:
+      runas: root
     - location: scripts/start_server.sh
       timeout: 300
-      runas: ec2-user
+      runas: root
